@@ -132,6 +132,11 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 7785) Postgres compatibility for timestamps in RC feeds
 * (bug 7550) Normalize user parameter normally on Special:Log
 * (bug 7294) Fix PATH search for diff3 on install
+* Various fixes related to the blocking change re: autoblocks. On inserting
+  an IP block, the ipb_enable_autoblock field is now automagically blanked,
+  because it doesn't make any sense for an IP. Additionally, IP blocks
+  without the ipb_enable_autoblock option no longer show up as "autoblock
+  disabled" on Special:Ipblocklist.
 
 == Languages updated ==
 
